--- a/src/MyProject.fsproj
+++ b/src/MyProject.fsproj
@@ -11,10 +11,10 @@
     <Compile Include="Counter/Types.fs" />
     <Compile Include="Counter/State.fs" />
     <Compile Include="Counter/View.fs" />
-    <!-- Home -->
-    <Compile Include="Home/Types.fs" />
-    <Compile Include="Home/State.fs" />
-    <Compile Include="Home/View.fs" />
+    <!-- Signup -->
+    <Compile Include="Signup/Types.fs" />
+    <Compile Include="Signup/State.fs" />
+    <Compile Include="Signup/View.fs" />
     <!-- Navbar -->
     <Compile Include="Navbar/View.fs" />
     <!-- App -->
