--- a/src/MyProject.fsproj
+++ b/src/MyProject.fsproj
@@ -26,6 +26,7 @@
     <Compile Include="Home/State.fs"/>
     <Compile Include="Home/View.fs"/>
     <!-- Navbar -->
+    <Compile Include="Navbar/Types.fs" />
     <Compile Include="Navbar/View.fs" />
     <!-- App -->
     <Compile Include="Types.fs" />
