--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma-pageloader": "2.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "remotedev": "^0.2.7"
