--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "Simple Fable App",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"build": "npx webpack",
+	"start" :"node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bulma-pageloader": "2.1.0",
+    "express": "^4.17.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "remotedev": "^0.2.7"
